Fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body {
 section {
   padding: 10px;
   width: 75vw;
-  overflow: scroll;
+  overflow-y: auto;
 }
 h2 {
   font-size: 5vw;
